# agc-template-market-harmonyos-demos

./: README.md
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/: CMakeLists.txt  main.cpp
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/camera/: ndk_camera.cpp  ndk_camera.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/capbilities/: demuxer.cpp  muxer.cpp  video_decoder.cpp  video_encoder.cpp
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/capbilities/include/: demuxer.h  muxer.h  video_decoder.h  video_encoder.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/common/: common.h  sample_callback.cpp  sample_callback.h  sample_info.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/render/: egl_render_context.cpp  egl_render_context.h  plugin_render.cpp  plugin_render.h  render_thread.cpp  render_thread.h  shader_program.cpp  shader_program.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/sample/player/: Player.cpp  Player.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/sample/recorder/: Recorder.cpp  Recorder.h
PhotographyTemplate/ImageProcessing/commons/camera_lut/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/: CMakeLists.txt
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/: app_napi.h  global.cpp  global.h  module.cpp  napi_manager.cpp  napi_manager.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/depth/: depth_ar_application.cpp  depth_ar_application.h  depth_background_no_renderer.cpp  depth_background_no_renderer.h  depth_background_renderer.cpp  depth_background_renderer.h  depth_render_manager.cpp  depth_render_manager.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/graphic/: GLUtils.cpp  GLUtils.h  RenderAttribute.cpp  RenderAttribute.h  RenderContext.cpp  RenderContext.h  RenderHeader.h  RenderObject.h  RenderSurface.cpp  RenderSurface.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/image/: image_ar_application.cpp  image_ar_application.h  image_background_renderer.cpp  image_background_renderer.h  image_line_render.cpp  image_line_render.h  image_render_base.cpp  image_render_base.h  image_render_manager.cpp  image_render_manager.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/mesh/: mesh_ar_application.cpp  mesh_ar_application.h  mesh_background_renderer.cpp  mesh_background_renderer.h  mesh_object_renderer.cpp  mesh_object_renderer.h  mesh_render_manager.cpp  mesh_render_manager.h  scenemesh_display_renderer.cpp  scenemesh_display_renderer.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/semanticdense/: semanticdense_ar_application.cpp  semanticdense_ar_application.h  semanticdense_background_renderer.cpp  semanticdense_background_renderer.h  semanticdense_cube_renderer.cpp  semanticdense_cube_renderer.h  semanticdense_point_cloud_renderer.cpp  semanticdense_point_cloud_renderer.h  semanticdense_render_manager.cpp  semanticdense_render_manager.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/utils/: app_file.cpp  app_file.h  app_util.cpp  app_util.h  log.h  native_common.h  renderer_ref.cpp  renderer_ref.h  task_queue.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/src/world/: world_ar_application.cpp  world_ar_application.h  world_background_renderer.cpp  world_background_renderer.h  world_file_manager.cpp  world_file_manager.h  world_object_renderer.cpp  world_object_renderer.h  world_plane_renderer.cpp  world_plane_renderer.h  world_render_manager.cpp  world_render_manager.h
ToolsTemplate/ComprehensiveTool/components/ar_measure/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/: CMakeLists.txt
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/avcodec/: audio_decoder.cpp  audio_encoder.cpp  audio_proresampler.cpp  audio_proresampler_process.c  av_decoder_engine.cpp  av_decoder_engine_impl.cpp  av_encoder_engine.cpp  demuxer.cpp  muxer.cpp  pcm_buffer_queue.cpp  video_decoder.cpp  video_encoder.cpp  video_process.cpp
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/avcodec/common/: avcodec_callback.cpp  avcodec_callback.h  avcodec_info.h  avcodec_log.h
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/avcodec/include/: audio_decoder.h  audio_encoder.h  audio_proresampler.h  audio_proresampler_process.h  av_decoder_engine.h  av_decoder_engine_impl.h  av_encoder_engine.h  codec_common.h  demuxer.h  i_av_decoder_engine.h  i_av_encoder_engine.h  muxer.h  pcm_buffer_queue.h  resampler.h  video_decoder.h  video_encoder.h  video_process.h
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/interface/: asyncwork.cpp  asyncwork.h  index.cpp  index.h  js_utils.cpp  js_utils.h  napi_init.cpp
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/models/: Canvas.cpp  Canvas.h  Editor.cpp  Editor.h  Timeline.cpp  Timeline.h  callbacks.h  utils.cpp  utils.h
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/models/assets/: Asset.cpp  AudioAsset.cpp  ImageAsset.cpp  VideoAsset.cpp
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/render/: README.md  egl_render_context.cpp  image_manager.cpp  render_engine.cpp  shader_program.cpp
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/render/common/: UniqueIDGenerator.h  constants.h
ToolsTemplate/ComprehensiveTool/components/video_clip/src/main/cpp/render/include/: UniqueIDGenerator.h  egl_render_context.h  i_gl_render_engine.h  image_manager.h  image_render_shaders.h  render_engine.h  shader_program.h
skills/: SKILL.md
(+12542 files in other folders)
